Fikser test.